formatted task entry to charactor entry format

--- a/Thibodeau_Ashley_CE03.Android/Thibodeau_Ashley_CE03.Android.csproj
+++ b/Thibodeau_Ashley_CE03.Android/Thibodeau_Ashley_CE03.Android.csproj
@@ -83,11 +83,27 @@
     <AndroidResource Include="Resources\mipmap-xxhdpi\launcher_foreground.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
-    <AndroidResource Include="Resources\drawable\one.jpg">
+    <AndroidResource Include="Resources\drawable\delete48.png">
       <SubType></SubType>
       <Generator></Generator>
     </AndroidResource>
-    <AndroidResource Include="Resources\drawable\two.jpg">
+    <AndroidResource Include="Resources\drawable\mage.png">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
+    <AndroidResource Include="Resources\drawable\priest.png">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
+    <AndroidResource Include="Resources\drawable\rogue.png">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
+    <AndroidResource Include="Resources\drawable\save48.png">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
+    <AndroidResource Include="Resources\drawable\warrior.png">
       <SubType></SubType>
       <Generator></Generator>
     </AndroidResource>
